app/frontend/_base.scss
*,
::before,
::after,
::placeholder {
  box-sizing: inherit;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  box-sizing: border-box;
  font:
    16px forma-djr-mono,
    sans-serif;
  font-weight: 500;
  letter-spacing: 1.5px;
  line-height: 1.5;
  background-color: var(--color-bg);
  color: var(--color-text);
}

a {
  text-decoration: underline;
  color: inherit;
  text-decoration-color: var(--color-bg-2);

  &:hover {
    color: #fff;
    text-decoration-color: #fff;
  }

  &.button {
    display: inline-block;
    background-color: var(--color-bg-2);
    padding: 12px 24px 14px;
    text-transform: uppercase;
    font-weight: bold;
    color: #fff;
    text-decoration: none;
    margin-top: 16px;
    font-size: 18px;

    &:hover {
      background-color: var(--color-bg-3);
    }
  }
}

.links {
  display: flex;
  justify-content: center;
  margin: 64px 0 0;
  gap: 24px;
  text-transform: uppercase;

  a {
    color: var(--color-text);
    padding: 8px;
    display: flex;
    font-weight: bold;

    &.text-link {
      position: relative;
      top: -2px;

      & + .text-link {
        margin-left: -8px;
      }
    }

    &:hover {
      color: #fff;
    }

    svg {
      width: 24px;
      height: 24px;
    }
  }

  @media (max-width: 460px) {
    gap: 8px;
  }
}

h1 {
  text-align: center;
  font:
    80px dharma-gothic-m,
    sans-serif;
  font-style: italic;
  text-transform: uppercase;
  letter-spacing: 24px;
  margin: 24px 0 24px;
  width: calc(100% - 24px);
  position: relative;
  left: 24px;
  pointer-events: none;
  color: var(--color-text-2);

  svg {
    vertical-align: middle;
    height: 88px;
    width: 88px;
    color: var(--color-text);
    margin: -10px 40px 0 16px;
  }

  @media (max-width: 800px) {
    font-size: 52px;
    letter-spacing: 14px;
    width: calc(100% - 14px);
    left: 14px;

    svg {
      width: 64px;
      height: 64px;
      margin-top: -8px;
      margin-right: 30px;
    }
  }
}

nav + nav {
  margin-top: 24px;
}

nav.pages {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  gap: 24px;
  padding: 0 24px;
  height: 48px;
  text-transform: uppercase;
  color: #fff;
  font-weight: bold;
  cursor: default;

  @media (max-width: 420px) {
    gap: 16px;
    padding: 0 16px;
  }

  span {
    color: var(--color-text);
    font-weight: normal;
  }

  a {
    font-weight: normal;
    color: var(--color-text);

    &:hover {
      color: #fff;
    }
  }
}

nav.game-selector {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 16px;
  padding: 0 24px;

  .selected-game {
    height: 32px;
    color: var(--color-bg);
    font-weight: bold;
    padding: 3px 12px 0;
    cursor: default;
    white-space: nowrap;
    background-color: var(--color-text);

    a {
      text-decoration: none;
      color: var(--color-text-2);

      &:hover {
        color: var(--color-bg);
      }
    }
  }

  .menu-container {
    position: relative;
  }

  .menu-toggle {
    display: block;
    height: 32px;
    color: var(--color-bg);
    font-weight: bold;
    padding: 0px 11px 0 12px;
    font-size: 20px;
    color: var(--color-text-2);
    cursor: pointer;
    letter-spacing: 0;
    background-color: var(--color-text);

    &::after {
      content: "";
      position: absolute;
      top: 100%;
      right: 0;
      width: 100%;
      height: 16px;
      visibility: hidden;
      background-color: var(--color-text);
    }

    &:hover {
      color: var(--color-bg);
    }
  }

  input[type="checkbox"] {
    display: none;

    &:checked {
      & ~ .unselected-games {
        visibility: visible;
      }

      & ~ .menu-toggle {
        color: var(--color-bg);
        cursor: default;

        &::after {
          visibility: visible;
        }
      }
    }
  }

  .unselected-games {
    list-style: none;
    margin: 16px 0 0;
    padding: 12px 24px 16px 16px;
    visibility: hidden;
    position: absolute;
    top: 100%;
    right: 0;
    background-color: var(--color-text);
    z-index: 10;

    li {
      margin: 0;
      padding: 0;
      white-space: nowrap;

      & + li {
        margin-top: 4px;
      }
    }

    a {
      color: var(--color-text-2);
      text-decoration: none;
      font-weight: bold;

      &:hover {
        color: var(--color-bg);
      }
    }
  }
}

nav.player-selector {
  display: flex;
  justify-content: center;
  margin-top: 40px;
}

main {
  margin: 80px auto;
  max-width: 528px;
  padding: 0 24px;
  text-align: center;
}

h2 {
  color: var(--color-text-3);
  font-size: 32px;
  letter-spacing: 4px;
  font-weight: 500;
  margin: 8px 0 12px;
  line-height: 1.25;
  word-wrap: break-word;
}

h2 a {
  color: #fff;
  text-underline-offset: 4px;
}

h3 {
  font-size: 18px;
  font-weight: bold;
}

h3.game-heading {
  margin-bottom: 4px;
}

p {
  margin: 0;
  line-height: 1.5;

  & + p {
    margin-top: 1em;
  }
}

time {
  font-weight: bold;
  text-transform: uppercase;
}

time.event-time {
  font-size: 14px;
  font-weight: normal;
}

article + article {
  margin-top: 80px;
}

article > .in-progress {
  display: flex;
  justify-content: center;
  margin-bottom: 8px;

  > div {
    background-color: #309191;
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 12px;
    line-height: 1;
    padding: 4px 8px 6px 9px;
    border-radius: 4px;
    position: relative;
    top: 1px;
    pointer-events: none;
  }
}

article > div + div {
  margin-top: 8px;
}

article > .game,
article > .streams {
  margin-top: 40px;
}

article > .game > .players {
  margin: 24px 0 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  line-height: 1;
  gap: 16px 32px;
}

article > .streams ul {
  list-style: none;
  margin: 12px 0 0;
  padding: 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  line-height: 1;
  gap: 16px 32px;
}

article > .streams li {
  display: flex;

  a {
    white-space: nowrap;
  }

  svg {
    display: inline-block;
    height: 16px;
    margin-right: 4px;
    vertical-align: middle;
    position: relative;
    top: -1px;
  }
}

article > .streams .live {
  background-color: #910830;
  color: #fff;
  margin-left: 8px;
  font-weight: bold;
  text-transform: uppercase;
  display: inline-block;
  font-size: 12px;
  line-height: 1;
  padding: 2px 3px 4px 4px;
  border-radius: 4px;
  position: relative;
  top: 1px;
  pointer-events: none;
}

section {
  text-align: left;
}

section + section {
  margin-top: 64px;
}

footer {
  margin: 120px 0 80px;
  padding: 0 24px;
  text-align: center;
  color: var(--color-text-2);
}

footer p {
  font-size: 14px;
  margin: 0;
}

footer p + p {
  margin-top: 8px;
}

